# gazebo_models

./: CMakeLists.txt  README.md  package.xml  readme.md  setup.py
gazebo_rviz/: model.dae
gazebo_rviz/mybot_description/xacro/: .mybot..swp  mybot.gazebo  mybot.xacro
misc/: spawn_model_params.txt
models/robocup_3Dsim_field/: model.sdf
models/simple_car/: model.config
my_robots/: model.sdf
old/: position2d.config
old/launch/: field_with_robot.launch
old/models/robocup_3Dsim_ball/: model.sdf
old/models/robot/: CMakeLists.txt  package.xml
old/models/simple_car/: model.sdf
old/robocup_3Dsim_ball/: robofield
ugly_car/: model.config
