<?xml version="1.0"?>
<package format="2">
  <name>gazebo_models</name>
  <version>0.1.0</version>
  <description>This is a package used for spwan models and test relative algorithms in gazebo.</description>
  <maintainer email="someone@somewhere.com">Chongyang Zhang</maintainer>
  <maintainer email="fjw16@mails.tsinghua.edu.cn">Jiawei Fu</maintainer>

  <license>BSD</license>

  <author email="someone@somewhere.com">Chongyang Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
